# Boids

./: .GLWrap.h.swp  .gitignore  .testSim.h.swp  Boids.h  CMakeLists.txt  GLWrap.h  OpenGLWrap.h  README.md  ]  bboid.py  boids_game.py  boids_gen.py  boids_openGL.py  boids_out.py  boids_runner.py  constants.py  main.cpp  mainold.cpp  parameters.py  requirements.txt  shader.shader  testSim.h
Python/: BoidsV1.webm  boids.py  boids_gen.py  boids_out.py
build-dir/: BoidsAnimation  CMakeCache.txt  HelloGL  Makefile  cmake_install.cmake  oldmain.cpp  shader.shader
build-dir/glfw-3.3.2/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-dir/glfw-3.3.2/src/: Makefile  cmake_install.cmake
build-dir/lib/: libGLEW.so.2.1.0  libGLEWd.so.2.1.0
src/boids/: base_boids.py  boids_animate.py  boids_game.py  boids_gen.py  boids_runner.py  multiproc_logging.py  parameters.py  pipe_boids.py
src/flask_app/: app.py
